<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center|center_horizontal"
        android:text="@string/calculator_text"
        android:textColor="#FFEB3B"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center|center_horizontal"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:textSize="30sp"
        android:autofillHints="">

    </EditText>

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center|center_horizontal"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:textSize="30sp"
        android:autofillHints="">

    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonbackgroundcolor"
            android:textSize="30sp"
            android:text="@string/plusOP"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonbackgroundcolor"
            android:textSize="30sp"
            android:text="@string/op2"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>


        <Button
            android:id="@+id/timesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonbackgroundcolor"
            android:textSize="30sp"
            android:text="@string/op3"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>


        <Button
            android:id="@+id/dividButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonbackgroundcolor"
            android:textSize="30sp"
            android:text="@string/op4"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

    </LinearLayout>


    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center|center_horizontal"
        android:text="@string/result"
        android:textColor="#FFEB3B"
        android:textSize="30sp" />


</LinearLayout>